--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -18,6 +18,19 @@
   --van-button-normal-font-size: 16px;
 }
 
+.van-tabs .van-tabs__nav {
+  padding: 0 0 15px 0;
+}
+
+.van-tabs .van-tabs__line {
+  width: 20px;
+  background-color: var(--cp-primary);
+}
+
+.van-tabs .van-tab {
+  padding: 0 15px;
+}
+
 body {
   font-size: 14px;
   color: var(--cp-text1);
@@ -25,6 +38,10 @@ body {
 
 a {
   color: var(--cp-text2);
+}
+
+#nprogress .bar {
+  background-color: var(--cp-primary) !important;
 }
 
 h1,
