--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -24,6 +24,22 @@
     --van-button-normal-font-size: 16px;
 }
 
+// 全局覆盖van-tab样式
+.van-tabs {
+    .van-tabs__nav {
+        padding: 0 0 15px 0;
+    }
+
+    .van-tabs__line {
+        width: 20px;
+        background-color: var(--cp-primary);
+    }
+
+    .van-tab {
+        padding: 0 15px;
+    }
+}
+
 // 全局样式
 body {
     font-size: 14px;
@@ -33,7 +49,10 @@ body {
 a {
     color: var(--cp-text2);
 }
-
+// 进度条
+#nprogress .bar {
+    background-color: var(--cp-primary) !important;
+}
 h1,
 h2,
 h3,
